# emmetrop

./: .gitignore  .gitmodules  LICENSE.rst  Makefile  README.md  README.rst  __init__.py  __main__.py  analysis.txt  setup.py  update.bat  update.sh
Figures/: SchematicEye.ai  SchematicEye.eps
OSLO_MTF_DATA/: 20degOFFaxisMTFinfFocusNavarrow1999.txt  40degOFFaxisMTFinfFocusNavarrow1999.txt  OFFaxisMTF16inFocus16inObjNavarrow1999.txt  OFFaxisMTF16inFocus20ftObjNavarrow1999.txt  OFFaxisMTF16inFocusNavarrow1999.txt  OFFaxisMTF16inUnderAccom20ftObjNavarrow1999.txt  OFFaxisMTF1mFocusNavarrow1999.txt  OFFaxisMTF20ftFocusNavarrow1999.txt  OFFaxisMTFinfFocusNavarrow1999.txt  ONaxisMTF16inFocus16inObjNavarrow1999.txt  ONaxisMTF16inFocus20ftObjNavarrow1999.txt  ONaxisMTF16inFocusNavarrow1999.txt  ONaxisMTF16inUnderAccom20ftObjNavarrow1999.txt  ONaxisMTF1mFocusNavarrow1999.txt  ONaxisMTF20ftFocusNavarrow1999.txt  ONaxisMTFinfFocusNavarrow1999.txt
analysis/: Eye_Grow.py  Information.py  NeitzModel.py  PlottingFun.py  __init__.py
cones/: dogRFields.py
database/: Database.py  webDB.py
doc/: Makefile  make.bat
doc/source/: .gitignore  ConeActivity.rst  ConeActivity_Images.rst  ConeActivity_Navarro1999.rst  ConeActivity_SchematicEyeAnalysis.rst  Database.rst  Database_Database.rst  Database_Preprocessing.rst  Database_ProgressBar.rst  Database_guiMain.rst  Install.rst  Neitz-Lab.rst  Neitz-Lab_DataManip.rst  Neitz-Lab_Eye_Grow.rst  Neitz-Lab_GeneralFunc.rst  Neitz-Lab_Information.rst  Neitz-Lab_PlottingFun.rst  Neitz-Lab_SignalProcessing.rst  Notes_links_todos.rst  analysis.dot  conf.py  (+27 more)
emmetrop/: README.md  __init__.py
eschaton/: __main__.py
eye/: Mutti.py  Optics.py  __init__.py  eyeModel.py  navarro1999params.py
eye/Cplusplus/: .gitignore  BuildEye.sh  CMakeList.txt  EyeDataProcessed.npz  EyePlots.py  Makefile.am  README.md  SchematicEye.cc  SchematicEye.pxd  SchematicEye.sh  build.cmake  configure.ac
gui/: Preprocessing.py  ProgressBar.py  __init__.py  create_exe.py  guiMain.py  guiMain.pyw
renderer/: PlottingFun.py  plotRepo.py
scene/: DataManip.py  ImageProcessing.py  Images.py  SignalProcessing.py  __init__.py
webUI/: index.html
(+55 files in other folders)
